--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-kapt'
 }
@@ -9,7 +9,6 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.example.crypto_compare"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
@@ -19,14 +18,8 @@ android {
     }
 
     buildTypes {
-        debug {
-            buildConfigField("String", "BASE_URL", '"https://min-api.cryptocompare.com/data/"')
-            buildConfigField("String", "API_KEY", '"9a1487a367a604a4d317f8c50ff00c8b8f672a649f44eda1d16170b8fa7bcdd3"')
-        }
         release {
             minifyEnabled false
-            buildConfigField("String", "BASE_URL", '"https://min-api.cryptocompare.com/data/"')
-            buildConfigField("String", "API_KEY", '"9a1487a367a604a4d317f8c50ff00c8b8f672a649f44eda1d16170b8fa7bcdd3"')
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -44,24 +37,15 @@ android {
 
 dependencies {
 
-    implementation(project(":framework"))
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
 
-    def coroutines_version = "1.5.0"
-    def coroutines_core_version = "1.4.1"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_core_version"
-
-    implementation "io.insert-koin:koin-core:$koin_version"
-    implementation "io.insert-koin:koin-core-ext:$koin_version"
-    implementation "io.insert-koin:koin-androidx-scope:$koin_version"
-    implementation "io.insert-koin:koin-androidx-viewmodel:$koin_version"
-    implementation "io.insert-koin:koin-androidx-ext:$koin_version"
-    testImplementation "io.insert-koin:koin-test:$koin_version"
+    def coroutine_version = '1.5.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
 
     def retrofit_version = '2.9.0'
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
