--- a/framework/src/main/AndroidManifest.xml
+++ b/framework/src/main/AndroidManifest.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.crypto_compare">
-
-    <uses-permission android:name="android.permission.INTERNET" />
+    package="com.example.framework">
 
     <application
-        android:name=".application.CryptoCompareApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
