--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures{
-        dataBinding = true
+        viewBinding = true
     }
 }
 
@@ -50,6 +50,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+
+    def nav_version_ktx = '2.3.5'
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version_ktx"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version_ktx"
 
     def coroutines_version = "1.5.0"
     def coroutines_core_version = "1.4.1"
