--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -31,7 +31,7 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures{
-        dataBinding = true
+        viewBinding = true
     }
 }
 
@@ -42,6 +42,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+
+    def nav_version_ktx = '2.3.5'
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version_ktx"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version_ktx"
 
     def coroutine_version = '1.5.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
