--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'kotlin-android-extensions'
 }
 
 android {
@@ -50,6 +51,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
     def nav_version_ktx = '2.3.5'
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version_ktx"
@@ -70,6 +72,13 @@ dependencies {
     def retrofit_version = '2.9.0'
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
+    //paging
+    implementation 'androidx.paging:paging-runtime-ktx:3.0.0'
+
+    def gander_version = '3.1.0'
+    debugImplementation "com.ashokvarma.android:gander-imdb:$gander_version"
+    releaseImplementation "com.ashokvarma.android:gander-no-op:$gander_version"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
